examples/invalid/types/loops.vbr
moderato(){
    a: quarter <-> 10 |
    loop i {
        a <-> a + i |
        i <-> 2 |
    } in (10)
    |>(a) |
}